objects/Policy_Contact_Method__c/Policy_Contact_Method__c.object-meta.xml
<CustomObject>
    <label>Policy Contact Method</label>
    <nameField>
        <displayFormat>PCM-{0000}</displayFormat>
        <label>Policy Contact Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Contact Method</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>