objects/Policy_Contact_Method__c/fields/Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Method</label>
    <referenceTo>Contact_Method__c</referenceTo>
    <relationshipLabel>Policy Contact Method</relationshipLabel>
    <relationshipName>Policy_Contact_Method</relationshipName>
    <type>Lookup</type>
</CustomField>