objects/Policy_Contact_Method__c/fields/Policy_Contact_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Policy_Contact_Purpose__c</fullName>
    <label>Policy Contact Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Purpose</valueSetName>
    </valueSet>
</CustomField>